2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_i386_pc.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-07-23  Nick Garnett  <nickg@balti.calivar.com>

	* include/plf_intr.h: Added extern definition for hal_pc_reset().

2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* include/pkgconf/mlt_i386_pc_rom.ldi: Brought list of sections up
	to date with other files.

2003-01-22  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/pkgconf/hal_i386_pc.h: Old file. Remove.

2002-11-28  Nick Garnett  <nickg@ecoscentric.com>

	* src/plf_stub.c: Removed redundant reinitialization of VSR table
	in hal_pc_stubs_init(). This has already been done in
	hal_platform_init() and reinitializing here destroys the FPU
	switch VSR.

	* src/plf_misc.c (hal_platform_init):
	Added configuration and test to avoid overwriting the FPU switch
	VSR with the default VSR. This caused problems with stand-alone
	application that use lazy FPU switching.
	Moved call to hal_ctrlc_isr_init() to after call to
	hal_if_init(). Previously, stand-alone applications had problems
	with ctrl-c handling because the CALL_HACK stuff didn't work.

	* cdl/hal_i386_pc.cdl:
	Added GRUB startup option. This enables support for booting from
	the GRUB bootloader.
	Added CYGDBG_HAL_DEBUG_GDB_INITIAL_BREAK option to force a
	breakpoint just before calling cyg_start(). This is insinuated
	into the CYGPKG_HAL_DEBUG part of the tree, and conditioned to
	only work for stand-alone apps with the stubs included.

	* include/platform.inc: Added GRUB startup support.

	* include/pkgconf/mlt_i386_pc_grub.mlt: 
	* include/pkgconf/mlt_i386_pc_grub.ldi: 
	* include/pkgconf/mlt_i386_pc_grub.h: 
	Added these MLT files to support the new GRUB startup option.

	* misc/menu.lst: Added this example GRUB menu configuration file.
	
2002-05-07  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_i386_pc.cdl: 
	Standardize CYGNUM_HAL_VIRTUAL_VECTOR_CONSOLE_CHANNEL_DEFAULT usage.
